[gd_scene load_steps=34 format=2]

[ext_resource path="res://Resources/ui/Levels/Disabled 9.png" type="Texture" id=1]
[ext_resource path="res://Resources/ui/Levels/Disabled 5.png" type="Texture" id=2]
[ext_resource path="res://Resources/ui/Levels/Idle 1.png" type="Texture" id=3]
[ext_resource path="res://Resources/ui/Levels/Pressed 9.png" type="Texture" id=4]
[ext_resource path="res://Resources/ui/Levels/Disabled 2.png" type="Texture" id=5]
[ext_resource path="res://Resources/ui/Levels/Idle 7.png" type="Texture" id=6]
[ext_resource path="res://Resources/ui/Levels/Idle 3.png" type="Texture" id=7]
[ext_resource path="res://Resources/ui/Levels/Disabled 8.png" type="Texture" id=8]
[ext_resource path="res://Resources/ui/Levels/Idle 2.png" type="Texture" id=9]
[ext_resource path="res://Resources/ui/Levels/Pressed 2.png" type="Texture" id=10]
[ext_resource path="res://Resources/ui/Levels/Disabled 7.png" type="Texture" id=11]
[ext_resource path="res://Resources/ui/Levels/Pressed 1.png" type="Texture" id=12]
[ext_resource path="res://Resources/ui/Levels/Idle 9.png" type="Texture" id=13]
[ext_resource path="res://Resources/ui/Levels/Idle 6.png" type="Texture" id=14]
[ext_resource path="res://Resources/ui/Levels/Disabled 4.png" type="Texture" id=15]
[ext_resource path="res://Resources/ui/Levels/Pressed 4.png" type="Texture" id=16]
[ext_resource path="res://Resources/ui/Levels/Disabled 6.png" type="Texture" id=17]
[ext_resource path="res://Resources/ui/Levels/Disabled 3.png" type="Texture" id=18]
[ext_resource path="res://Resources/ui/Levels/Idle 5.png" type="Texture" id=19]
[ext_resource path="res://Resources/ui/Levels/Idle 4.png" type="Texture" id=20]
[ext_resource path="res://Resources/ui/Levels/Idle 8.png" type="Texture" id=21]
[ext_resource path="res://Resources/ui/Levels/Pressed 3.png" type="Texture" id=22]
[ext_resource path="res://Resources/ui/Levels/Pressed 8.png" type="Texture" id=23]
[ext_resource path="res://Resources/ui/Levels/Pressed 6.png" type="Texture" id=24]
[ext_resource path="res://Resources/ui/Levels/Pressed 7.png" type="Texture" id=25]
[ext_resource path="res://Resources/ui/Levels/Disabled 1.png" type="Texture" id=26]
[ext_resource path="res://Resources/ui/Levels/Pressed 5.png" type="Texture" id=27]
[ext_resource path="res://User Interface/world_menu.gd" type="Script" id=28]
[ext_resource path="res://Resources/ui/4.png" type="Texture" id=29]
[ext_resource path="res://Resources/ui/2.png" type="Texture" id=30]
[ext_resource path="res://Resources/ui/Pixellari.ttf" type="DynamicFontData" id=31]
[ext_resource path="res://User Interface/4.tscn" type="PackedScene" id=32]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 31 )

[node name="world_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" parent="." instance=ExtResource( 32 )]
offset = Vector2( -390, -45 )
transform = Transform2D( 1, 0, 0, 1, -390, -45 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 246.0
margin_bottom = 134.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 246.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Choose Level:"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 246.0
margin_bottom = 94.0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 158.0
margin_bottom = 74.0
columns = 3

[node name="1" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_right = 21.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 12 )
texture_disabled = ExtResource( 26 )

[node name="2" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_left = 25.0
margin_right = 46.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 5 )

[node name="3" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_left = 50.0
margin_right = 71.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 22 )
texture_disabled = ExtResource( 18 )

[node name="4" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_top = 26.0
margin_right = 21.0
margin_bottom = 48.0
action_mode = 0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 16 )
texture_disabled = ExtResource( 15 )

[node name="5" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_left = 25.0
margin_top = 26.0
margin_right = 46.0
margin_bottom = 48.0
action_mode = 0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 27 )
texture_disabled = ExtResource( 2 )

[node name="6" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_left = 50.0
margin_top = 26.0
margin_right = 71.0
margin_bottom = 48.0
action_mode = 0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 24 )
texture_disabled = ExtResource( 17 )

[node name="7" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_top = 52.0
margin_right = 21.0
margin_bottom = 74.0
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 25 )
texture_disabled = ExtResource( 11 )

[node name="8" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_left = 25.0
margin_top = 52.0
margin_right = 46.0
margin_bottom = 74.0
action_mode = 0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 23 )
texture_disabled = ExtResource( 8 )

[node name="9" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer/GridContainer"]
margin_left = 50.0
margin_top = 52.0
margin_right = 71.0
margin_bottom = 74.0
action_mode = 0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_top = 98.0
margin_right = 246.0
margin_bottom = 120.0

[node name="return" type="TextureButton" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
margin_right = 21.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/1" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/5" to="." method="_on_TextureButton5_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/6" to="." method="_on_TextureButton6_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/7" to="." method="_on_TextureButton7_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/8" to="." method="_on_TextureButton8_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer/GridContainer/9" to="." method="_on_TextureButton9_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/HBoxContainer2/return" to="." method="_on_return_pressed"]
